gatekeeper/constraints/templates/k8sdisallowanonymous.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowanonymous
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowAnonymous
  targets:
    - target: admission.k8s.io/v1
      rego: |
        package k8sdisallowanonymous
        violation[{"msg": msg}] {
          input.review.kind.kind == "ServiceAccount"
          input.review.object.metadata.name == "default"
          msg := "Default service account should not be used"
        }
